--- a/css/estilos.css
+++ b/css/estilos.css
@@ -118,7 +118,7 @@ background-position: center;
 	animation: bajar-subir 1s ease infinite;
 }
 /*video de querer*/
-.bg-video {
+/* .bg-video {
 	position: absolute;
 	z-index: 10;
 	right: 0;
@@ -130,7 +130,7 @@ background-position: center;
 	background-position: center;
 	background-size: contain;
 	object-fit: cover;
-}
+} */
 /*animacion*/
 @keyframes bajar-subir {
 	0% {transform: translateY(20px);}
@@ -174,6 +174,9 @@ background-position: center;
 }
 .item article:nth-child(3) {
 	background-color: #f9f9f9;
+}
+.item article:nth-child(4) {
+	background-color: cornflowerblue;
 }
 
 .item .item-info {
@@ -227,6 +230,19 @@ background-position: center;
 	font-size: 1.5rem;
 }
 
+/* about me */
+
+.about-me {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-weight: bold;
+    font-size: 2rem;
+    width: 60%;
+    margin: 0 auto;
+}
+
 /* Clases de fullpage.js - slider flechas*/
 
 .fp-controlArrow.fp-next,
@@ -246,6 +262,76 @@ background-position: center;
 	border-color: transparent transparent transparent #000;
 
 }
+
+
+/* contact modal */
+.row {
+	background: #000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    /* padding: 20px; */
+}
+
+.contact{
+	/* height: 70%; */
+	background-color: #272231;
+	border: 1px solid;
+	color: #fff;
+	padding: 20px;
+	position: fixed;
+	text-align: center;
+	width: 80%;
+	z-index: 10000;
+	display: none;
+	
+}
+
+.close{
+	font-size: 3rem;
+	text-align: right;
+	color: #fff;
+	cursor: pointer;
+}
+form{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+input, select{
+	width: 100%;
+	height: 50px;
+	background: rgba(196, 175, 239, 0.15);
+	color: #fff;
+	border: none;
+	padding: 5px;
+}
+select{
+	background-color: #3e374e !important;
+	
+}
+textarea{
+	width: 100%;
+	padding: 5px;
+	background: rgba(196, 175, 239, 0.15);
+	color: #fff;
+	border: none;
+}
+input::placeholder, textarea::placeholder{
+	color: #fff;
+}
+label{
+	padding: 5px;
+}
+/*
+iframe{
+
+} */
+/* end modal */
+
 /*footer */
 
 .footer .texto-naranja {
@@ -357,6 +443,41 @@ background-position: center;
 	.icon-title {
 		font-size: .7rem;
 	}
+	.contact {
+		width: 35%;
+		padding: 5px;
+		margin-bottom: 226px;
+	}
+	.close {
+		font-size: 2rem;
+	}
+	input, select, textarea {
+		height: 30px;
+	}
+	.g-recaptcha {
+		transform: scale(.9);
+		transform-origin: 0 0;
+		margin: 5px 0;
+	}
+}
+@media all and (max-width: 736px) and (max-height: 414px) {
+
+	.contact {
+		width: 35%;
+		padding: 5px;
+		margin-bottom: 140px;
+	}
+	.g-recaptcha {
+		transform: scale(.815);
+		transform-origin: 0 0;
+		margin: 5px 0;
+	}
+}
+@media all and (max-width: 735px) and (max-height: 413px) {
+
+	.contact {
+		display: none !important;
+	}
 }
 
 @media all and (max-width: 568px) and (max-height: 320px) {
@@ -369,6 +490,9 @@ background-position: center;
 	}
 	.portfolio-item img{
 		width: 190px !important;
+	}
+	.about-me {
+		font-size: 1.3rem;
 	}
 	
 }
@@ -460,6 +584,10 @@ background-position: center;
 	.item .model {
 		font-size: 1.5rem;
 	}
+	.about-me {
+		font-size: 1.4rem;
+		width: 80%;
+	}
 	
 	.footer .orange-text {
 		font-size: 18px;
@@ -471,8 +599,40 @@ background-position: center;
 	.footer .redes-sociales i {
 		font-size: 24px;
 	}
+	.contact {
+		padding: 10px;
+	}
+	input, select {
+		height: 30px;
+	}
+	.close {
+		font-size: 2rem;
+	}
 }
-
+/* captcha */
+@media all and (max-width: 414px){
+	.g-recaptcha {
+		transform: scale(1.03);
+		transform-origin: 0 0;
+		margin: 5px 0;
+	}
+}
+@media all and (max-width: 411px){
+	.g-recaptcha {
+		transform: scale(1.02);
+	}
+}
+@media all and (max-width: 375px){
+	.g-recaptcha {
+		transform: scale(.92);
+	}
+}
+@media all and (max-width: 360px){
+	.g-recaptcha {
+		transform: scale(.88);
+	}
+}
+/* end captcha */
 @media all and (max-width: 440px) and (max-height: 823px){
 	.portfolio {
 		flex-direction: column;
@@ -528,76 +688,13 @@ background-position: center;
 	.item .item-info {
 		bottom: -5%;
 	}
+	.about-me {
+		font-size: 1.2rem;
+	}
+	textarea {
+		height: 60px;
+	}
+	.g-recaptcha {
+		transform: scale(.78);
+	}
 }
-
-
-.row {
-	background: #000;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 9999;
-    /* padding: 20px; */
-}
-.contact{
-	/* height: 70%; */
-	background-color: #272231;
-	border: 1px solid;
-	color: #fff;
-	padding: 20px;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
-	width: 80%;
-	z-index: 10000;
-	display: none;
-	
-}
-/* inicio contact modal */
-.close{
-	font-size: 3rem;
-	text-align: right;
-	color: #fff;
-	cursor: pointer;
-}
-form{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-input, select{
-	width: 100%;
-	height: 50px;
-	background: rgba(196, 175, 239, 0.15);
-	color: #fff;
-	border: none;
-	padding: 5px;
-}
-select{
-	background-color: #3e374e !important;
-	
-}
-textarea{
-	width: 100%;
-	padding: 5px;
-	background: rgba(196, 175, 239, 0.15);
-	color: #fff;
-	border: none;
-}
-input::placeholder, textarea::placeholder{
-	color: #fff;
-}
-label{
-	padding: 5px;
-}
-/* .g-recaptcha {
-
-}
-iframe{
-
-} */
-/* fin modal */
