--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,7 +281,7 @@ background-position: center;
 	border: 1px solid;
 	color: #fff;
 	padding: 20px;
-	position: fixed;
+	position: absolute;
 	text-align: center;
 	width: 80%;
 	z-index: 10000;
@@ -444,40 +444,9 @@ iframe{
 		font-size: .7rem;
 	}
 	.contact {
-		width: 35%;
-		padding: 5px;
-		margin-bottom: 226px;
-	}
-	.close {
-		font-size: 2rem;
-	}
-	input, select, textarea {
-		height: 30px;
-	}
-	.g-recaptcha {
-		transform: scale(.9);
-		transform-origin: 0 0;
-		margin: 5px 0;
-	}
-}
-@media all and (max-width: 736px) and (max-height: 414px) {
-
-	.contact {
-		width: 35%;
-		padding: 5px;
-		margin-bottom: 140px;
-	}
-	.g-recaptcha {
-		transform: scale(.815);
-		transform-origin: 0 0;
-		margin: 5px 0;
-	}
-}
-@media all and (max-width: 735px) and (max-height: 413px) {
-
-	.contact {
 		display: none !important;
 	}
+	
 }
 
 @media all and (max-width: 568px) and (max-height: 320px) {
@@ -628,6 +597,15 @@ iframe{
 	}
 }
 @media all and (max-width: 360px){
+
+	.footer .redes-sociales {
+		width: 80%;
+		margin: 0 auto;
+	}
+	.footer .redes-sociales a {
+		width: 80px;
+		height: 80px;
+	}
 	.g-recaptcha {
 		transform: scale(.88);
 	}
