--- a/css/estilos.css
+++ b/css/estilos.css
@@ -280,12 +280,14 @@ background-position: center;
 	background-color: #272231;
 	border: 1px solid;
 	color: #fff;
+	display: none;
 	padding: 20px;
 	position: absolute;
 	text-align: center;
+	left: 50%;
+    transform: translate(-50%, -5%);
 	width: 80%;
 	z-index: 10000;
-	display: none;
 	
 }
 
@@ -628,28 +630,16 @@ iframe{
 		font-size: .8rem;
 	}
 }
-
 @media all and (max-width: 414px) and (max-height: 736px) {
 	.item .item-info {
 		bottom: 0%;
 	}
 }
-
 @media all and (max-width: 375px) and (max-height: 667px){
 
 	.item .item-info{
 		bottom: -3.5%;
     	padding: 30px 0;
-	}
-}
-@media all and (max-width: 360px) and (max-height: 640px){
-
-	.item .item-info {
-    bottom: -2%;
-    padding: 25px 0;
-	}
-	.item .model {
-		font-size: 1.5rem;
 	}
 }
 @media all and (max-width: 360px) and (max-height: 640px){
@@ -663,8 +653,14 @@ iframe{
 	.icon-title {
 		font-size: .6rem;
 	}
+	.item .item-info {
+    bottom: -5%;
+    padding: 25px 0;
+	}
+	.item .model {
+		font-size: 1.5rem;
+	}
 }
-
 @media all and (max-width: 320px) {
 	.item .item-info {
 		bottom: -5%;
