--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,11 +281,12 @@ background-position: center;
 	border: 1px solid;
 	color: #fff;
 	display: none;
+	left: 50%;
 	padding: 20px;
 	position: absolute;
 	text-align: center;
-	left: 50%;
-    transform: translate(-50%, -5%);
+	top: 50%;
+    transform: translate(-50%, -50%);
 	width: 80%;
 	z-index: 10000;
 	
