--- a/css/estilos.css
+++ b/css/estilos.css
@@ -276,7 +276,7 @@ background-position: center;
 }
 
 .contact{
-	/* height: 70%; */
+	height: 60%;
 	background-color: #272231;
 	border: 1px solid;
 	color: #fff;
