--- a/css/estilos.css
+++ b/css/estilos.css
@@ -145,7 +145,7 @@ background-position: center;
     top: 50%;
 	margin: 10px;
 	padding: 0 0 0 50px;
-	position: fixed;
+	position: absolute;
     z-index: 100;
     -ms-transform: translateY(-50%);
     -webkit-transform: translate3d(0,-50%,0);
