--- a/css/estilos.css
+++ b/css/estilos.css
@@ -265,15 +265,14 @@ background-position: center;
 
 
 /* contact modal */
-.row {
+/* .row {
 	background: #000;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
-    /* padding: 20px; */
-}
+} */
 
 /* .contact{
 	height: auto;
@@ -288,7 +287,7 @@ background-position: center;
 	z-index: 10000;	
 } */
 
-.close{
+/* .close{
 	font-size: 3rem;
 	text-align: right;
 	color: #fff;
@@ -324,7 +323,7 @@ input::placeholder, textarea::placeholder{
 }
 label{
 	padding: 5px;
-}
+} */
 /*
 iframe{
 
