--- a/css/estilos.css
+++ b/css/estilos.css
@@ -385,150 +385,61 @@ iframe{
 
 /*media queries*/
 
-@media all and (max-width: 1280px){
 
-	.portfolio-item{
-	width: 460px;
+
+@media all and (max-width: 450px){
+	.nav {
+		display: block;
+		text-align: center;
 	}
-	.portfolio-item img{
-	width: 450px;
+
+	.nav a{
+		font-size: 16px;
+		margin-bottom: 0;
 	}
-}
-
-@media all and (max-width: 1024px){
-
-	.item .item-info{
-		bottom: 3%;
+	.nav li {
+		font-size: 40px;
+	}
+	.menu {
+		display: flex;
+		justify-content: space-between;
+	}
+	.menu li a,
+	.menu li.active a{
+		font-size: 15px;
+		padding: 5px;
+	}
+	.titulo {
+		font-size: 45px;
 	}
 	.item .model {
-		font-size: 2.5rem;
-	}
-	.portfolio {
-		flex-direction: column;
-	}
-	.portfolio-item {
-		margin: 10px 0 15px 0;
-	}
-}
-
-@media all and (max-height: 800px){
-	.portfolio {
-		flex-direction: initial;
-	}
-	.portfolio-item{
-	width: 410px;
-	}
-	.portfolio-item img{
-	width: 400px;
-	}
-}
-
-@media all and (max-width: 823px) and (max-height: 440px) {
-
-	.nav{
-		padding: 15px;
-	}
-	.item .item-info {
-		bottom: 5%;
-	}
-	.item .model  {
-		font-size: 2rem;
-	}
-	.portfolio-item{
-		width: 260px;
-	}
-	.portfolio-item img{
-		width: 250px;
-	}
-	.icon-title {
-		font-size: .7rem;
-	}
-	.social {
-		display: none;
-	}
-	.contact {
-		display: none !important;
-	}
-	
-}
-
-@media all and (max-width: 568px) and (max-height: 320px) {
-
-	/* .item .model {
 		font-size: 1.5rem;
-	} */
-	.portfolio-item {
-		width: 200px !important;
-	}
-	.portfolio-item img{
-		width: 190px !important;
 	}
 	.about-me {
-		font-size: 1.3rem;
+		font-size: 1.4rem;
+		width: 80%;
 	}
 	
-}
-
-@media all and (max-width: 768px) {
-	.menu li a, 
-	.menu li.active a{
+	.footer .orange-text {
 		font-size: 18px;
 	}
-	.social {
-		display: none;
+	.footer .redes-sociales a{
+		width: 50px;
+		height: 50px;
 	}
-	.model {
-		font-size: 40px;
+	.footer .redes-sociales i {
+		font-size: 24px;
 	}
-	.item .item-info{
-		bottom: 2%;
-    	padding: 15px 0;
+	.contact {
+		padding: 10px;
 	}
-	.item .model{
+	input, select {
+		height: 30px;
+	}
+	.close {
 		font-size: 2rem;
 	}
-	.footer h2 {
-		font-size: 15px;
-	}
-	.footer .redes-sociales {
-		font-size: 30px;
-	}
-	.footer .redes-sociales a {
-		width: 70px;
-		height: 70px;
-	}
-	.footer .texto-naranja {
-		font-size: 40px;
-	}
 }
-
-@media screen and (max-width: 576px){
-	.header .titulo {
-		font-size: 50px;
-	}
-	.nav{
-		padding: 10px 20px;
-	}
-	.portfolio-item {
-		width: 360px;
-	}
-	.portfolio-item img {
-		width: 350px;
-	}
-	.item-info {
-		position: absolute;
-		
-	}
-	.fp-controlArrow.fp-next {
-		left: 100px;
-	}
-	.fp-controlArrow.fp-prev {
-		left: 25px;
-
-	}
-}
-
-
 /* captcha */
 @media all and (max-width: 414px){
 	.g-recaptcha {
