--- a/css/estilos.css
+++ b/css/estilos.css
@@ -411,7 +411,7 @@ iframe{
 	}
 }
 
-@media all and (max-height: 800px){
+/* @media all and (max-height: 800px){
 	.portfolio {
 		flex-direction: initial;
 	}
@@ -421,7 +421,7 @@ iframe{
 	.portfolio-item img{
 	width: 400px;
 	}
-}
+} */
 
 @media all and (max-width: 823px) and (max-height: 440px) {
 
@@ -449,9 +449,7 @@ iframe{
 	.contact {
 		display: none !important;
 	}
-	
 }
-
 @media all and (max-width: 568px) and (max-height: 320px) {
 
 	/* .item .model {
@@ -466,10 +464,9 @@ iframe{
 	.about-me {
 		font-size: 1.3rem;
 	}
-	
 }
 
-/* @media all and (max-width: 768px) {
+@media all and (max-width: 768px) {
 	.menu li a, 
 	.menu li.active a{
 		font-size: 18px;
@@ -500,7 +497,7 @@ iframe{
 	.footer .texto-naranja {
 		font-size: 40px;
 	}
-} */
+}
 
 @media screen and (max-width: 576px){
 	.header .titulo {
