--- a/css/estilos.css
+++ b/css/estilos.css
@@ -385,7 +385,7 @@ iframe{
 
 /*media queries*/
 
-/* @media all and (max-width: 1280px){
+@media all and (max-width: 1280px){
 
 	.portfolio-item{
 	width: 460px;
@@ -393,7 +393,7 @@ iframe{
 	.portfolio-item img{
 	width: 450px;
 	}
-} */
+}
 
 @media all and (max-width: 1024px){
 
@@ -423,7 +423,7 @@ iframe{
 	}
 }
 
-@media all and (max-width: 823px) and (max-height: 440px) {
+/* @media all and (max-width: 823px) and (max-height: 440px) {
 
 	.nav{
 		padding: 15px;
@@ -452,9 +452,6 @@ iframe{
 }
 @media all and (max-width: 568px) and (max-height: 320px) {
 
-	/* .item .model {
-		font-size: 1.5rem;
-	} */
 	.portfolio-item {
 		width: 200px !important;
 	}
@@ -464,7 +461,7 @@ iframe{
 	.about-me {
 		font-size: 1.3rem;
 	}
-}
+} */
 
 @media all and (max-width: 768px) {
 	.menu li a, 
