--- a/css/estilos.css
+++ b/css/estilos.css
@@ -422,12 +422,10 @@ iframe{
 	width: 400px;
 	}
 }
+/* impostor */
+@media all and (max-width: 823px) and (max-height: 440px) {
 
-/* @media all and (max-width: 823px) and (max-height: 440px) {
-
-	.nav{
-		padding: 15px;
-	}
+	
 	.item .item-info {
 		bottom: 5%;
 	}
@@ -450,6 +448,7 @@ iframe{
 		display: none !important;
 	}
 }
+/* impostor arriba */
 @media all and (max-width: 568px) and (max-height: 320px) {
 
 	.portfolio-item {
@@ -461,7 +460,7 @@ iframe{
 	.about-me {
 		font-size: 1.3rem;
 	}
-} */
+}
 
 @media all and (max-width: 768px) {
 	.menu li a, 
