--- a/css/estilos.css
+++ b/css/estilos.css
@@ -422,35 +422,7 @@ iframe{
 	width: 400px;
 	}
 }
-/* impostor */
-/* @media all and (max-width: 823px) and (max-height: 440px) {
 
-	.nav{
-		padding: 15px;
-	}
-	.item .item-info {
-		bottom: 5%;
-	}
-	.item .model  {
-		font-size: 2rem;
-	}
-	.portfolio-item{
-		width: 260px;
-	}
-	.portfolio-item img{
-		width: 250px;
-	}
-	.icon-title {
-		font-size: .7rem;
-	}
-	.social {
-		display: none;
-	}
-	.contact {
-		display: none !important;
-	}
-} */
-/* impostor arriba */
 @media all and (max-width: 568px) and (max-height: 320px) {
 
 	.portfolio-item {
@@ -668,3 +640,32 @@ iframe{
 		transform: scale(.78);
 	}
 }
+/* impostor */
+@media all and (max-width: 823px) and (max-height: 440px) {
+
+	.nav{
+		padding: 15px;
+	}
+	.item .item-info {
+		bottom: 5%;
+	}
+	.item .model  {
+		font-size: 2rem;
+	}
+	.portfolio-item{
+		width: 260px;
+	}
+	.portfolio-item img{
+		width: 250px;
+	}
+	.icon-title {
+		font-size: .7rem;
+	}
+	.social {
+		display: none;
+	}
+	.contact {
+		display: none !important;
+	}
+}
+/* impostor arriba */
